--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "nodegenx",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A CLI tool to generate Node.js backend project.",
   "type": "module",
   "main": "src/index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nikhilmnk/nodegenx.git"
+  },
+  "homepage": "https://github.com/nikhilmnk/nodegenx#readme",
+  "bugs": {
+    "url": "https://github.com/nikhilmnk/nodegenx/issues"
+  },
   "bin": {
     "nodegenx": "./bin/cli.js"
   },
@@ -24,7 +32,6 @@
     "child_process": "^1.0.2",
     "commander": "^14.0.1",
     "ejs": "^3.1.10",
-    "express": "^5.1.0",
     "fs-extra": "^11.3.2",
     "inquirer": "^12.9.6",
     "ora": "^9.0.0"
